Update educational institution and dates in index.html

--- a/index.html
+++ b/index.html
@@ -526,9 +526,9 @@
             <tbody>
                 <tr>
                     <td><strong>Master Génie Logiciel</strong></td>
-                    <td>Université Internationale</td>
+                    <td>Ecole Nationionele Supérieure Polytechnique</td>
                     <td>Architecture Enterprise</td>
-                    <td>18 mois</td>
+                    <td>12mois</td>
                 </tr>
                 <tr>
                     <td><strong>Master Data Science</strong></td>
@@ -568,19 +568,19 @@
                     <td>Poste Développeuse FullStack</td>
                 </tr>
                 <tr>
-                    <td><strong>Q2 2025</strong></td>
+                    <td><strong>Q2 2025/strong></td>
                     <td>Lead projet paiements digitaux</td>
                     <td>Début Master Génie Logiciel</td>
                     <td>Augmentation responsabilités</td>
                 </tr>
                 <tr>
-                    <td><strong>Q3 2025</strong></td>
+                    <td><strong>Q3 2026</strong></td>
                     <td>Architecture microservices</td>
                     <td>Docker & Kubernetes</td>
                     <td>Promotion Tech Lead</td>
                 </tr>
                 <tr>
-                    <td><strong>Q4 2025</strong></td>
+                    <td><strong>Q4 2026</strong></td>
                     <td>Sécurité applications</td>
                     <td>CEH Preparation</td>
                     <td>Expertise reconnue</td>
