--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
         <div class="content-grid">
             <div class="card">
                 <h4><i class="fas fa-briefcase"></i> 2025-2026</h4>
-                <p><strong>Développeuse FullStack Senior</strong></p>
+                <p><strong>Développeuse FullStack Junior</strong></p>
                 <p>Startup FinTech innovante</p>
                 <p>Focus: Paiements mobiles & APIs</p>
             </div>
@@ -678,12 +678,12 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><strong>M. Jacques Espoir</strong></td>
+                    <td><strong>M. Tankui Frank</strong></td>
                     <td>Architecture FinTech</td>
                     <td>Design systèmes complexes</td>
                 </tr>
                 <tr>
-                    <td><strong>M. Tankui Frank</strong></td>
+                    <td><strong>M. Jacques Espoir</strong></td>
                     <td>Stratégie Technologique</td>
                     <td>Leadership & vision</td>
                 </tr>
